--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -860,7 +860,7 @@ body.post-type-bp-email .categorydiv label {
 }
 
 .bp_appboss_wrap .appboss-small-dark-block {
-    background-color: #54687d;
+    background-color: #9041CD;
     text-align: center;
 }
 
