added h2 title in settings section

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -409,6 +409,9 @@ tr.bp-search-parent-field td p.section-header {
     background-image: url('../../images/admin/icon_loop.svg');
 }
 
+.buddyboss_page_bp-settings .section-bp_search_settings_community h2,
+.buddyboss_page_bp-settings .section-bp_search_settings_post_types h2,
+.buddyboss_page_bp-settings .section-bp_search_settings_general h2,
 .buddyboss_page_bp-settings .section-bbp_settings_users h2,
 .buddyboss_page_bp-settings .section-bbp_settings_features h2,
 .buddyboss_page_bp-settings .section-bbp_settings_per_page h2,
@@ -428,6 +431,10 @@ tr.bp-search-parent-field td p.section-header {
     background-image: url('../../images/admin/icon_calendar.svg');
 }
 
+.buddyboss_page_bp-settings .section-bp_search_settings_community th[scope="row"],
+.buddyboss_page_bp-settings .section-bp_search_settings_post_types th[scope="row"] {
+	width: 30px;
+}
 /*
  * 3.0 Users
  */
