search/icon updates

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -396,7 +396,7 @@ tr.bp-search-parent-field td p.section-header {
 }
 
 .buddyboss_page_bp-settings .section-bp_invites h2 {
-    background-image: url('../../images/admin/icon_user-plus.svg');
+    background-image: url('../../images/admin/icon_note.svg');
 }
 
 .buddyboss_page_bp-settings .section-bp_groups h2,
@@ -406,7 +406,7 @@ tr.bp-search-parent-field td p.section-header {
 }
 
 .buddyboss_page_bp-settings .section-bp_friends h2 {
-    background-image: url('../../images/admin/icon_loop.svg');
+    background-image: url('../../images/admin/icon_user-plus.svg');
 }
 
 .buddyboss_page_bp-settings .section-bbp_settings_users h2,
@@ -426,6 +426,21 @@ tr.bp-search-parent-field td p.section-header {
 
 .buddyboss_page_bp-integrations .section-bp_ld_sync-reports h2 {
     background-image: url('../../images/admin/icon_calendar.svg');
+}
+
+.buddyboss_page_bp-settings .section-bp_search_settings_community h2,
+.buddyboss_page_bp-settings .section-bp_search_settings_post_types h2,
+.buddyboss_page_bp-settings .section-bp_search_settings_general h2 {
+    background-image: url('../../images/admin/icon_loop.svg');
+}
+
+.buddyboss_page_bp-settings .section-bp_search_settings_community table,
+.buddyboss_page_bp-settings .section-bp_search_settings_post_types table {
+	margin-bottom: 20px;
+}
+.buddyboss_page_bp-settings .section-bp_search_settings_community th[scope="row"],
+.buddyboss_page_bp-settings .section-bp_search_settings_post_types th[scope="row"] {
+	width: 1px;
 }
 
 /*
