Dashboard > switch it to Gutenberg Blocks https://trello.com/c/wNcyPyYu/300-dashboard-switch-it-to-gutenberg-blocks removed profile dashboard

--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -387,6 +387,8 @@ tr.bp-search-parent-field td p.section-header {
 }
 
 .buddyboss_page_bp-settings .section-bp_xprofile h2,
+.buddyboss_page_bp-settings .section-bp_profile_dashboard_settings h2,
+.buddyboss_page_bp-settings .section-bp_profile_search_settings h2,
 .buddyboss_page_bp-settings .section-bp_member_type_settings h2 {
     background-image: url('../../images/admin/icon_user.svg');
 }
