--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -375,6 +375,7 @@ tr.bp-search-parent-field td p.section-header {
 .buddyboss_page_bp-integrations .card h2 {
     background-repeat: no-repeat;
     background-position: left center;
+    background-image: url('../../images/admin/icon_gear.svg');
     background-size: 56px;
     line-height: 56px;
     padding-left: 78px;
