--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -166,35 +166,55 @@ AJAX SEARCH
 +++++++++++++++++++++++++++++++++++++++++ */
 
 .bboss_ajax_search_item {
-	margin: 0;
-}
+    margin: 0;
+    
+    > a {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
 
-.bboss_ajax_search_item .item-avatar {
-	display: table-cell;
-	vertical-align: middle;
-	padding-right: 10px;
-	padding-left: 1px;
-	box-sizing: border-box;
-	width: 50px;
-}
+    .item-avatar {
+        margin-right: 12px;
+        width: 50px;
 
-.bboss_ajax_search_item .item-avatar img {
-	vertical-align: middle;
-	width: 40px;
-	height: 40px;
-}
+        img {
+            vertical-align: middle;
+            max-width: 48px;
+            width: 100%;
+            height: auto;
+        }
+    }
 
-.bboss_ajax_search_item .item {
-	display: table-cell;
-	vertical-align: middle;
-	overflow: hidden;
-	line-height: 1.3;
-}
+    .item {
+        flex: 1;
+        overflow: hidden;
+        line-height: 1.3;
 
-.bboss_ajax_search_item .item .item-desc {
-	margin-top: 5px;
-	font-size: 80%;
-	color: #a9a9a9;
+        .item-desc {
+            margin-top: 5px;
+            font-size: 80%;
+            color: #a9a9a9;
+        }
+    }
+
+    .item-title {
+        font-size: 15px;
+        color: #122b46;
+        letter-spacing: -0.24px;
+        margin-bottom: 3px;
+    }
+
+    .item-meta {
+        margin-bottom: 0;
+        font-size: 12px;
+        color: #a3a5a9;
+        letter-spacing: -0.18px;
+    }
+
 }
 
 .ui-menu .ui-menu-item a,
@@ -212,7 +232,7 @@ AJAX SEARCH
 	min-width: 280px;
 	overflow-x: hidden;
 	overflow-y: hidden;
-	padding: 0;
+	padding: 10px 0 0;
 	background-color: #fff;
 }
 
@@ -242,7 +262,7 @@ AJAX SEARCH
 }
 
 .bb-global-search-ac li:not(.bbls-category) .bboss_ajax_search_item {
-	padding: 14px 0 9px;
+    padding: 10px 0;
 }
 
 .bb-global-search-ac.ui-menu .ui-menu-item:last-child .bboss_ajax_search_item,
@@ -292,8 +312,10 @@ AJAX SEARCH
 }
 
 .bb-global-search-ac.ui-menu .ui-menu-item:last-child .bboss_ajax_search_item a {
-	padding: 9px 10px;
-	display: block;
+    color: inherit;
+    display: block;
+    padding: 9px 10px;
+    text-align: center;
 }
 
 .bb-global-search-ac.ui-menu .ui-state-focus {
