--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -165,6 +165,10 @@
 AJAX SEARCH
 +++++++++++++++++++++++++++++++++++++++++ */
 
+body.bp-search.search-results #primary {
+    width: 100%;
+}
+
 .bboss_ajax_search_item {
     margin: 0;
     
@@ -361,7 +365,12 @@ div.search_results .groups-list li .last-activity {
 }
 
 .bboss_search_results_wrapper .bboss_search_form_wrapper {
-	margin: 1.5em 0;
+    float: left;
+	margin: 0 0 20px;
+}
+
+.search_results {
+    clear: both;
 }
 
 .bboss_search_results_wrapper .results-group-members {
