--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -341,18 +341,33 @@ SEARCH RESULTS PAGE
 	border-top: none !important;
 }
 
-div.search_results h2.results-group-title {
+.search_results .results-group-title {
 	text-transform: capitalize;
 	float: left;
 	margin-bottom: 0;
 }
 
-div.search_results header.results-group-header {
-	border-bottom: 1px solid;
+.bboss_search_page .bp-navs ul li .count {
+    margin-left: 6px;
 }
 
-div.search_results .results-group-header a.view-all-link {
-	float: right;
+.bboss-results-wrap {
+    .results-group-header {
+        border-bottom: 1px solid #ccc;
+        display: flex;
+        align-items: center;
+        padding-bottom: 5px;
+    }
+
+    .results-group-title {
+        flex: 1;
+    }
+
+    .view-all-link {
+        font-size: 14px;
+        color: #888;
+        line-height: 1;
+    }
 }
 
 div.search_results .item-list {
@@ -383,48 +398,6 @@ div.search_results .groups-list li .last-activity {
 	border-bottom: 1px solid #eee;
 }
 
-#buddypress ul.item-list li.bboss_search_item_member .item {
-	height: 70px;
-}
-
-.bboss_search_item_post .entry-summary p,
-.bboss_search_item_post .entry-title {
-	margin: 0 0 10px;
-}
-
-.bboss_search_item img.avatar {
-	width: 50px;
-	height: 50px;
-}
-
-#buddypress .results-group .activity-list .activity-content {
-	margin-left: 60px;
-}
-
-.entry-content p.message_participants {
-	margin-bottom: 10px;
-}
-
-.bboss_search_item .conversation {
-	display: table;
-}
-
-.bboss_search_item .conversation .item-avatar {
-	display: table-cell;
-	width: 50px;
-}
-
-.bboss_search_item .conversation .item {
-	display: table-cell;
-	vertical-align: top;
-	overflow: hidden;
-	padding-left: 10px;
-}
-
-body.search-results #buddypress #mobile-item-nav ul li a,
-#buddypress .search_filters.item-list-tabs ul li a {
-	text-transform: capitalize;
-}
 
 /* Classifieds plugin */
 
@@ -540,34 +513,44 @@ body.search-results #buddypress #mobile-item-nav ul li a,
 
 /** BuddyPress Nouveau Template Packs */
 
-body.bp-nouveau .bboss-results-list > li {
-	border-bottom: 1px solid #eaeaea;
-	padding: 15px 0;
-	margin: 0;
-	position: relative;
-	list-style: none;
-}
+.bboss-results-list .bboss_search_item {
+    margin: 0;
+    padding: 15px 0;
 
-body.bp-nouveau .bboss-results-list > li .item-avatar,
-body.bp-nouveau .bboss-results-list > li .activity-avatar {
-	float: left;
-	margin-right: 5px;
-}
+    .list-wrap {
+        display: flex;
+        align-items: center;
+    }
 
-body.bp-nouveau .bboss-results-list > li.bboss_search_item_member {
-	overflow: hidden;
-}
+    .item-avatar {
+        margin-right: 12px;
+        max-width: 50px;
+    }
 
-body.bp-nouveau .bboss-results-list > li.bboss_search_item_member .item {
-	float: left;
-}
+    .item-avatar img.avatar {
+        display: block;
+    }
 
-body.bp-nouveau .bboss-results-list > li .item-avatar img.avatar,
-body.bp-nouveau .bboss-results-list > li .activity-avatar img.avatar {
-	margin-bottom: 10px;
-	margin-right: 10px;
-}
+    .item {
+        flex: 1;
+    }
 
-.bboss_search_item img.avatar {
-	border-radius: 0;
+    h2.list-title {
+        float: none;
+        font-size: 16px;
+        color: #122B46;
+        letter-spacing: -0.24px;
+        margin-bottom: 4px;
+        text-align: left;
+    }
+
+    p.item-meta {
+        margin-bottom: 0;
+        text-align: left;
+    }
+
+    .item-desc {
+        color: #737373;
+        font-size: 12px;
+    }
 }
