--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -176,9 +176,6 @@ body.bp-search.search-results #primary {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
     }
 
     .item-avatar {
@@ -197,6 +194,7 @@ body.bp-search.search-results #primary {
         flex: 1;
         overflow: hidden;
         line-height: 1.3;
+        align-self: center;
 
         .item-desc {
             margin-top: 5px;
