#220 Search > Displaying results in plugin AND theme (big task)

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -517,7 +517,6 @@ div.search_results .groups-list li .last-activity {
 
     .list-wrap {
         display: flex;
-        align-items: center;
     }
 
     .item-avatar {
@@ -530,14 +529,17 @@ div.search_results .groups-list li .last-activity {
     }
 
     .item {
+        display: block;
         flex: 1;
+        align-self: center;
     }
 
-    h2.list-title {
+    .item-title {
         float: none;
         font-size: 16px;
         color: #122B46;
         letter-spacing: -0.24px;
+        line-height: 1;
         margin-bottom: 4px;
         text-align: left;
     }
@@ -550,5 +552,6 @@ div.search_results .groups-list li .last-activity {
     .item-desc {
         color: #737373;
         font-size: 12px;
+        line-height: 1.4;
     }
 }
